	out of Vector, so that we can at a later time specialize it for character
	vectors, lists, etc ...

2010-06-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Date.h: add struct tm member variable and
	sensible (ie non-intra-day) accessor functions; add SEXP ctor
	* src/Date.cpp: Implementation of the above
	* inst/unitTests/runit.Date.R: tests for the above

2010-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Import mktime00() from R's src/main/datetime.c,
	  completed class implementation
	* inst/include/Rcpp/Date.h: Add mktime00() declaration

	* inst/include/Rcpp/DateVector.h: New DateVector class
	* src/Date.cpp: Implementation for new DateVector class

2010-06-23  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Date_forward.h: forward declaration of Rcpp::Date and
	support for wrap( container of Rcpp::Date ), e.g. wrap( vector<Date> )
	
	* inst/include/Rcpp/sugar/Range.h: added the concept of range to allow
	modification of several elements of a vector.

	* inst/examples/ConvolveBenchmarks: version of the convolution function
	using sugar indexing.

2010-06-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Date.h: New Date class (not yet complete)
	* src/Date.cpp: Implementation for new Date class (not yet complete)
	* inst/unitTests/runit.Date.R: first tests for Rcpp::Date

2010-06-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/SugarBenchmark/: New example trying to benchmark
	new syntactic 'sugar' classes

2010-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppDoxygenExamples.h: Correct three wrong paths for
	ConvolveBenchmak example files, and add missing FastLM/ examples

2010-06-18  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/*: implementation of Rcpp sugar, covering
	binary operators (<,>,<=,>=,!=,==) for logical vectors or logical
	expressions, arithmetic operators (+,-,*,/) for vectors and